# CUDA_Mnemonic_Recovery

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CUDA_Mnemonic_Recovery.sln  CUDA_Mnemonic_Recovery.vcxproj  CUDA_Mnemonic_Recovery.vcxproj.filters  LICENSE.txt  Makefile  README.md  README.ru.md  RELEASE_CHECKLIST.md  RESPONSIBLE_USE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  VALIDATION.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release-bundles.yml
examples/: passphrases.txt  templates.txt
examples/bench/: templates-1x-3missing.txt  templates-1x-4missing.txt  templates-8x-2missing.txt  templates-8x-3missing.txt
examples/derivations/: default.txt
examples/validation/: derivations-solana.txt  template-typo.txt  templates-stream-a.txt  templates-stream-b.txt
include/app/: recovery_app.h  recovery_cli.h  recovery_config.h
include/cuda/: DerivationFunc.cuh  Kernel.cuh
include/recovery/: RecoveryWordlistsEmbedded.h  filter.h
include/support/: Words.cuh  intrin_local.h  uint128_t.cuh  xor_filter.cuh
scripts/: validate_release.ps1  validate_release.sh
src/app/: main.cpp  recovery_cli.cpp  recovery_config.cpp
src/crypto/: FilterFunc.cu  HashFunc.cu  MnemonicFunc.cu  TonFunc.cu  filter.cpp
src/cuda/: Kernel.cu  WorkerRecovery.cu  WorkerRecoveryCompat.cu
src/recovery/: recovery_compat_device.cu  recovery_filter_verify.cu  recovery_pipeline.cu  recovery_results.cu
support/: CudaHashLookup.h
